--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<title>CSS3 Playground</title>
 	<link rel="stylesheet" href="./styles.css">
+
+	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+	<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script src="./scripts.js" ></script>
 </head>
 <body>
 	<div id="box"></div>
